[package]
authors = ["dns <91dns@protonmail.me>"]
name = "pinelog"
version = "0.1.0"
edition = "2024"
description = "A simple logging library"
license = "MIT"
repository = "https://github.com/91dns/pinelog"
documentation = "https://docs.rs/pinelog"
homepage = "https://github.com/91dns/pinelog"
keywords = ["logging", "log", "logger"]
categories = ["development-tools"]

[dependencies]
chrono = "0.4.40"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
